# learn-cmake

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
cross-compile/: Toolchain-rpi.cmake  Toolchain-windows.cmake  init.sh
instrument/: CMakeLists.txt
instrument/src/: instrument.cpp  instrument.h  main.cpp
remoteserviceagent/: CMakeLists.txt
remoteserviceagent/cmake/: RemoteServiceAgentConfig.cmake  RemoteServiceAgentConfig.cmake.in
remoteserviceagent/docs/: Doxyfile.in  intro.md
remoteserviceagent/include/: remoteserviceagent.h  version_config.h.in
remoteserviceagent/src/: azureiot.cpp  remoteserviceagent.cpp  remoteserviceagent_threads.cpp
remoteserviceagent/tests/: library_tests.cpp
